# gpui-component

./: .gitignore  .rustfmt.toml  .theme-schema.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ONETCLI_LICENSE  README.md  README_CN.md  SKILL_IMPROVEMENT_PLAN.md  SYNTAX_ERROR_FEATURE.md  _typos.toml  editor-fold-plan.md  flake.nix  jsh  justfile  refactor.sh  rustfmt.toml  supabase.sql  wr.sh
crates/app_visibility/: Cargo.toml
crates/app_visibility/src/: error.rs  lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  native_assets.rs  wasm_assets.rs
crates/core/: Cargo.toml  build.rs
crates/core/locales/: core.yml
crates/core/migrations/: 20241219000001_create_workspaces.sql  20241219000002_create_connections.sql  20241219000003_create_queries.sql  20241219000004_create_llm_providers.sql  20241219000005_create_chat_sessions.sql  20241219000006_create_chat_messages.sql  20241219000007_add_selected_databases_to_connections.sql  20241219000008_add_remark_to_connections.sql  20250128000001_create_terminal_commands.sql  20250131000001_create_quick_commands.sql  20250201000001_add_sync_fields_to_connections.sql  20250202000001_remove_unique_constraint_on_connection_name.sql  20250203000001_create_pending_cloud_deletions.sql  20250203000002_add_cloud_id_to_workspaces.sql  20260208000001_add_models_to_llm_providers.sql  20260225000001_init.sql  20260315000001_team_sync.sql  20260317000001_connection_owner.sql
crates/core/src/: config.rs  connection_notifier.rs  crypto.rs  gpui_tokio.rs  key_storage.rs  layout.rs  lib.rs  popup_window.rs  tab_container.rs  tab_persistence.rs  themes.rs
crates/core/src/agent/: dispatcher.rs  mod.rs  registry.rs  router.rs  types.rs
crates/core/src/ai_chat/: ask_ai.rs  delegate.rs  engine.rs  mod.rs  panel.rs  rendering.rs  services.rs  stream.rs  types.rs
crates/db/: Cargo.toml  README.md
crates/db/locales/: db.yml
crates/db/src/: cache.rs  cache_manager.rs  connection.rs  ddl_invalidator.rs  executor.rs  lib.rs  manager.rs  metadata_cache.rs  plugin.rs  rustls_provider.rs  sql_format.rs  ssh_tunnel.rs  streaming_parser.rs  types.rs
crates/db_view/: Cargo.toml
crates/db_view/locales/: db_view.yml
crates/db_view/src/: connection_form_window.rs  database_objects_tab.rs  database_tab.rs  database_view_plugin.rs  db_tree_event.rs  db_tree_view.rs  lib.rs  sql_editor.rs  sql_editor_completion_tests.rs  sql_editor_view.rs  sql_inline_completion.rs  sql_result_tab.rs  table_data_tab.rs  table_designer_tab.rs
crates/macros/: Cargo.toml
crates/macros/src/: derive_into_plot.rs  lib.rs
crates/mongodb_view/: Cargo.toml
crates/mongodb_view/locales/: mongodb_view.yml
crates/mongodb_view/src/: collection_view.rs  connection.rs  lib.rs  manager.rs  mongo_form_window.rs  mongo_tab.rs  mongo_tree_event.rs  mongo_tree_view.rs  sidebar.rs  types.rs
crates/one_ui/: Cargo.toml
crates/one_ui/src/: lib.rs  resize_handle.rs
crates/redis_view/: Cargo.toml
crates/redis_view/locales/: redis_view.yml
crates/redis_view/src/: connection.rs  create_key_dialog.rs  key_value_view.rs  lib.rs  manager.rs  redis_cli_element.rs  redis_cli_view.rs  redis_form_window.rs  redis_tab.rs  redis_tree_event.rs  redis_tree_view.rs  sidebar.rs  types.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: http_client_tls.rs  lib.rs  native_client.rs  reqwest_client.rs  wasm_client.rs
crates/sftp/: Cargo.toml
crates/sftp/locales/: sftp.yml
crates/sftp/src/: lib.rs  russh_impl.rs
crates/sftp_view/: Cargo.toml
crates/sftp_view/locales/: sftp_view.yml
crates/sftp_view/src/: context_menu_handler.rs  file_list_panel.rs  lib.rs
crates/ssh/: Cargo.toml
crates/ssh/locales/: ssh.yml
crates/ssh/src/: lib.rs  ssh.rs
crates/story-web/: Cargo.toml  Makefile  NEXT_STEPS.md  PROGRESS.md  README.md  STATUS.md
crates/story-web/scripts/: build-wasm.sh
crates/story-web/src/: lib.rs
crates/story-web/www/: package.json  vite.config.js
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs  pty_backend.rs  serial_backend.rs  ssh_backend.rs  terminal.rs  types.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/locales/: terminal_view.yml
crates/terminal_view/src/: addon.rs  blink_manager.rs  keys.rs  lib.rs  serial_form_window.rs  ssh_form_window.rs  terminal.rs  terminal_element.rs  theme.rs  view.rs
crates/todo-app-gpui/: Cargo.toml  README.md  build.rs  tree.txt
crates/todo-app-gpui/examples/: list.rs  mcp.rs  specz.rs  window.rs  window_position.rs  window_shadow.rs
crates/todo-app-gpui/src/: app.rs  backoffice.rs  bench.rs  ebus.rs  main.rs  mutex.rs  ui.rs  xbus.rs
crates/webview/: Cargo.toml  README.md
crates/webview/src/: context_menu.rs  lib.rs
examples/app_assets/: Cargo.toml  README.md
examples/app_assets/src/: main.rs
examples/dialog_overlay/: Cargo.toml
examples/dialog_overlay/src/: main.rs
examples/editor/: Cargo.toml
examples/editor/src/: document_colors.rs  main.rs  rust_analyzer.rs  text_convetor.rs
examples/iconify/: Cargo.toml  README.md
examples/iconify/src/: main.rs
examples/issue_2157_markdown_list_clipping/: Cargo.toml
examples/issue_2157_markdown_list_clipping/src/: main.rs
examples/modal_overlay/: Cargo.toml
examples/modal_overlay/src/: main.rs
examples/sidebar_icon/: Cargo.toml
examples/sidebar_icon/src/: main.rs
examples/sidebar_none/: Cargo.toml
examples/sidebar_none/src/: main.rs
examples/titlebar_buttons/: Cargo.toml
examples/titlebar_buttons/src/: main.rs
gpui-patch/: Cargo.toml
gpui-patch/src/: gpui.rs  profiler.rs
gpui-patch/src/profiler/: actions.rs
main/: Cargo.toml  build.rs
main/locales/: main.yml
main/src/: app_init.rs  auth.rs  encourage.rs  home_tab.rs  license.rs  main.rs  onehub_app.rs  onetcli_app.rs  setting_tab.rs  team_management.rs  update.rs  user_avatar.rs
main/src/home/: home_connection_quick_open.rs  home_new_connection.rs  home_strategy.rs  home_tabs.rs  home_workspace_filter.rs  mod.rs  workspace_form_window.rs
main/src/settings/: llm_providers_view.rs  mod.rs  provider_form_dialog.rs
(+1235 files in other folders)
