[package]
name = "one-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
dirs.workspace = true
gpui.workspace = true
gpui-component.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
llm-connector.workspace = true
futures-util = "0.3"
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
sha2.workspace = true
ed25519-dalek = "2.2.0"
parking_lot.workspace = true
util.workspace = true
rust-i18n.workspace = true
