[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
duckdb.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true
gpui.workspace = true
gpui-component.workspace = true
chrono.workspace = true
mysql_async.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
tiberius.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
oracle.workspace = true
clickhouse.workspace = true
one-core.workspace = true
ssh.workspace = true
sqlformat.workspace = true
sqlparser.workspace = true
uuid.workspace = true
dashmap.workspace = true
moka.workspace = true
smol.workspace = true
regex.workspace = true
thiserror.workspace = true
rust-i18n.workspace = true
[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
