[package]
name = "db_view"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true
smol.workspace = true
gpui.workspace = true
db.workspace = true
gpui-component = { workspace = true }
one-ui.workspace = true
one-core.workspace = true
sum-tree.workspace = true
lsp-types.workspace = true
uuid.workspace = true
rust_xlsxwriter.workspace = true
rust-i18n.workspace = true
json5.workspace = true
regex.workspace = true
[dev-dependencies]
proptest = { workspace = true }
zip = "6.0.0"

[lints]
workspace = true
