[package]
edition = "2021"
name = "gpui-component-macros"
description = "Macros for GPUI Component."
version = "0.4.0-preview3"
publish = true
license = "Apache-2.0"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]
