[package]
name = "one-ui"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui = { workspace = true }
gpui-component.workspace = true
gpui-macros.workspace = true
notify.workspace = true
ropey.workspace = true
rust-i18n.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
smallvec.workspace = true
smol.workspace = true
sum-tree.workspace = true
tracing.workspace = true

# one-core 依赖 (AI Chat Panel)
one-core = { path = "../core" }
futures.workspace = true

enum-iterator = "2.1.0"
itertools = "0.13.0"
once_cell = "1.19.0"
paste = "1"
regex = "1"
unicode-segmentation = "1.12.0"
uuid = "1.10"
# Calendar
chrono = "0.4.38"

[lints]
workspace = true
