[package]
name = "redis_view"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
gpui.workspace = true
gpui-component.workspace = true
one-ui.workspace = true
one-core.workspace = true
rust-i18n.workspace = true
dashmap.workspace = true
redis_client.workspace = true

[lints]
workspace = true
