[package]
name = "reqwest_client"
version = "0.5.1"
license = "Apache-2.0"
publish = false
edition.workspace = true

[lints]
workspace = true

[features]
test-support = []

[lib]
path = "src/lib.rs"
doctest = true

[dependencies]
gpui.workspace = true
anyhow.workspace = true
log.workspace = true
bytes = "1.0"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = "1.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Headers",
    "Window",
] }

[dev-dependencies]
gpui.workspace = true
