[package]
name = "sftp"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "net"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust-i18n = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
ssh = { workspace = true }
tokio-socks = { workspace = true }

[lints]
workspace = true
