[package]
name = "ssh"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "net", "io-util"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust-i18n = { workspace = true }
dirs.workspace = true
# SSH and SFTP
russh.workspace = true
# Proxy support
tokio-socks.workspace = true

[lints]
workspace = true
