[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs"] }
anyhow = { workspace = true }

ssh = { workspace = true }

# Terminal emulation
alacritty_terminal.workspace = true
serde = { workspace = true }
tracing = { workspace = true }


[target.'cfg(unix)'.dependencies]
libc = "0.2"
