[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
one-core = { workspace = true }
gpui = { workspace = true }
ssh = { workspace = true }

# Terminal emulation
alacritty_terminal.workspace = true
serde = { workspace = true }
tracing = { workspace = true }
serialport = { workspace = true }


[target.'cfg(unix)'.dependencies]
libc = "0.2"
