[package]
name = "todo-app-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
fake = { version = "4.3.0", features = ["dummy"] }
gpui.workspace = true
gpui-component = { workspace = true, features = ["webview"] }
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "rustls-tls-native-roots",
    "socks",
    "stream",
] }
rand = "0.9.1"
# story = { workspace = true }
raw-window-handle = { version = "0.6", features = ["std"] }
regex = "1"
reqwest_client.workspace = true
rust-embed = "8.5.0"
serde = "1"
serde_json = "1.0.140"
unindent = "0.2.3"
uuid = "1.17.0"
serde_yaml = "0.9.33"
tempfile = "3.10.0"
rig-core = { git = "https://github.com/gqf2008/rig", branch = "main" }
tokio = { version = "1.45.1", features = ["full"] }
crossbeam-skiplist = "0.1"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "std",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "fmt",
] }
serde-xml-rs = "0.8.1"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "client",
    "reqwest",
    "auth",
    "transport-sse-server",
    "transport-io",
    "transport-sse-client",
    "transport-child-process",
    "transport-streamable-http-client",
] }
actix = "0.13.5"
actix-rt = "2.10.0"
dirs = "6.0.0"
homedir = "0.3.4"
cron = "0.15.0"
duration-str = "0.17.0"
chrono-tz = "0.10.3"
sysinfo = "0.35.1"
log = "0.4.27"
ftlog = "0.2.15"
mimalloc = { version = "0.1.47" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
] }


[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18" }


# [profile.release]
# lto = true
# panic = "abort"
