[package]
name = "gpui-webview"
version = "0.1.0"
edition = "2024"
authors = ["sunli <scott_s829@163.com>"]
license = "Apache-2.0"
homepage = "https://github.com/longbridge/gpui-component"
repository = "https://github.com/longbridge/gpui-component"


[dependencies]
gpui.workspace = true
gpui-component.workspace = true
wef.workspace = true

image = { version = "0.25.6", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "1.0.4", features = ["indexmap2"] }
raw-window-handle = "0.6.2"
rust-i18n = "3.1.5"
